Signed-off-by: ivn-svn <isvetllin@gmail.com>

--- a/new-ivn-svn/index.html
+++ b/new-ivn-svn/index.html
@@ -86,7 +86,7 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-python"></i></div>
-									<div class="text"><a href="http://ride-calc.tk/">Python</a></div>
+									<div class="text">Python</div>
 								</div>
 							</li>
 							<li>
@@ -322,7 +322,6 @@
 											2017 Test DaF (Deutsch als Fremdsprache) & IELTS 
 										</div>
 										<div class="info">
-											<p class="info_title">
 											Erasmus & EVS (European Voluntary Service)  
 											</p>
 											<p class="info_com">
