--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-python"></i></div>
-									<div class="text"><a href="http://ride-calc.tk/">Python</a></div>
+									<div class="text"><a href="http://ride-calc.tk/" style="text-decoration: none !important">Python</a></div>
 								</div>
 							</li>
 							<li>
