06/12/2021 | Daily commit. Fixing www.svetlinphotography.ml

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-camera"></i></div>
-									<div class="text">Photography</div>
+									<a href="http://svetlinphotography.ml/"><div class="text">Photography</div></a>
 								</div>
 							</li>
 							<li>
