07/12/2021 | Dauly Commit, website update: Hobbies, added video editing.
Signed-off-by: ivn-svn <isvetllin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -154,8 +154,14 @@
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><i class="fas fa-object-group"></i></i></div>
+									<div class="icon"><i class="fas fa-object-group"></i></div>
 									<div class="text">Design</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fas fa-film"></i></div>
+									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text">Video editing</div></a>
 								</div>
 							</li>
 						</ul>
