--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-js"></i></div>
-									<div class="text">Javascript</div>
+									<div class="text">JavaScript</div>
 								</div>
 							</li>
 							<li>
@@ -182,7 +182,7 @@
 						I am an ex-journalist keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
-						scripting in bash, Python, experience on data analysis
+						scripting in bash, Python, experience working at a Technical Analyst
 						positions using tools like Kibana and Grafana has most
 						recently positioned me well in the Bulgarian IT industry.
 
@@ -314,7 +314,7 @@
 												Lived & worked abroad  
 											</p>
 											<p class="info_com">
-											Chemnitz, Germany | <br><br>  Lisbon, Portugal | <br><br>  Berlin, Germany | 
+											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany  
 											</p>
 											<p class="info_cont">
 												<!-- TO BE FILLED IN -->
