Signed-off-by: ivn-svn <isvetllin@gmail.com> fixes, personal website, added blockchain

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-git"></i>></div>
-									<div class="text">git</div>
+									<div class="text">Git</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-vuejs"></i></div>
-									<div class="text">vagrant</div>
+									<div class="text">Vagrant</div>
 								</div>
 							</li>
 						</ul>
@@ -118,7 +118,7 @@
 				</div>
 				<div class="hobbies_wrap pb">
 					<div class="title">
-						hobbies
+						Hobbies
 					</div>
 					<div class="hobbies">
 						<ul>
@@ -164,6 +164,12 @@
 									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text">Video editing</div></a>
 								</div>
 							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-hive"></i></div>
+									<div class="text">Blockchain</div>
+								</div>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -184,8 +190,7 @@
 						years. My knowledge of Windows and Linux, coupled with
 						scripting in bash, Python, experience working at a Technical Analyst
 						positions using tools like Kibana and Grafana has most
-						recently positioned me well in the Bulgarian IT industry.
-
+						recently made me a good fit for the Bulgarian IT industry.
 					</div>
 				</div>
 				<div class="right_inner">
