--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 						</div>
 					</div>
 					<div class="about">
-						I am an ex-journalist keeping strong interest in technology
+						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
 						scripting in bash, Python, experience working at a Technical Analyst
 						positions using tools like Kibana and Grafana has most
-						recently made me a good fit for the Bulgarian IT industry.
+						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
 				</div>
 				<div class="right_inner">
@@ -319,7 +319,7 @@
 												Lived & worked abroad  
 											</p>
 											<p class="info_com">
-											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany  
+											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Got deeply involved in crypto in early 2016.   
 											</p>
 											<p class="info_cont">
 												<!-- TO BE FILLED IN -->
