08/12/2021 | Daily commit: Personal CV Signed-off-by: ivn-svn <isvetllin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
-						scripting in bash, Python, experience working at a Technical Analyst
-						positions using tools like Kibana and Grafana has most
+						scripting in bash, Python, experience working as a Technical Analyst,
+						using the full-stack of technologies utilized in both DevOps & ITOps teams has most
 						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
 				</div>
@@ -228,7 +228,12 @@
 												etc. Localization and
 												translation for countries from the European Union.
 												Creation & Execution of Testing Plan & Testing Cases
-												Build & Test of dummy data, mapping the logic of the Implementation </p>
+												Build & Test of dummy data, mapping the logic of the Implementation. Managing Access Control Lists
+												of an ad-hoc, purpose-built client cloud platform. Maintenance of the questions & answers database of the clients. E.g. 
+												Creating new answer entries and engineering the structure of the survey based on previous ones 
+												(taking decisions on utilizing old infrastructure or creating new one)
+												Sync of survey answer DB entries, across active surveys, survey infrastructure incident management, etc.
+											</p>
 										</div>
 									</div>
 								</li>
@@ -251,8 +256,7 @@
 												Log monitoring and analysis of server application errors using Grafana,
 												Logstash Kibana, Java
 												EE, Enterprise APIs, SoapUI, Postman, JSON and XML, GitLab, Git, Github,
-												Git Extensions.
-												Managing the workflow and escalating tickets on Jira.
+												Git Extensions. Documenting the workflow and escalating tickets on Jira.
 											</p>
 										</div>
 									</div>
@@ -295,7 +299,7 @@
 										<p class="info_cont">
 											Mass software deployment of applications for all Windows versions from the past 10 years for a
 											major client from the German automotive industry. Used technologies: Windows SysInternals
-											tools, advanced knowledge of the Windows Registry, GPMC.msc, patch testing for Adobe
+											tools, Active Directory, the Windows Registry, GPMC.msc, patch testing for Adobe
 											Creative Cloud packages, PowerShell and Batch scripting, InstallShield, Repackager and Regshot.
 										</p>
 									</div>
