--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
-						scripting in bash, Python, experience working as a Technical Analyst,
+						scripting in bash,JavaScript Python, experience working as a Technical Analyst,
 						using the full-stack of technologies utilized in both DevOps & ITOps teams has most
 						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
