12/12/2021 | Daily commit: Personal CV update about crypto.

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 												Lived & worked abroad  
 											</p>
 											<p class="info_com">
-											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Got deeply involved in crypto in early 2016.   
+											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br>   
 											</p>
 											<p class="info_cont">
 												<!-- TO BE FILLED IN -->
@@ -376,7 +376,7 @@
 												18 high-school William Gladstone, Sofia
 											</p>
 											<p class="info_com">
-												Natural Science & Informatics  
+												STEM: Natural Science & Informatics  
 											</p>
 											<p class="info_cont">
 												<!-- TO BE FILLED IN -->
