committing new branch: mm-redesign

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
 	<meta charset="UTF-8">
 	<title>Svetlin's CV</title>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="responsive.css">
+	<link rel="stylesheet" href="banner.css">
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	<!-- TEST JS -->
-	<script type="text/javascript" src="charts.js"></script>
-	<!-- TEST JS END-->
 
 </head>
 
 <body>
+	<!-- BANNER START  -->
+	<div id="banner-area">
+		<div id ="banner-content">
+			<!-- <h2>this is the banner</h2> -->
+		</div>
+	</div> <!-- remove if banner is removed! /-->
+		<!--BA NNER END-->
 	<div class="wrapper">
 		<div class="resume">
 			<div class="left">
@@ -44,8 +49,8 @@
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><a href="https://www.github.com/ivn-svn" style="color:moccasin"><i class="fas fa-code-branch"></i></a></div>
-									<div class="text">github.com/ivn-svn</div>
+									<div class="icon"><a href="https://gitlab.mentormate.bg/devcamp_2022_01_fe_lamp/svetlin_ivanov" style="color:moccasin"><i class="fas fa-code-branch"></i></a></div>
+									<div class="text">GitLab</div>
 								</div>
 							</li>
 							<li>
@@ -184,7 +189,7 @@
 							Technical Analyst
 						</div>
 					</div>
-					<div class="about">
+					<div id="about">
 						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
@@ -392,6 +397,7 @@
 			</div>
 		</div>
 	</div>
+
 </body>
 
 </html>
