changes to media screen for device responsiveness and fixes to actual biography according to current status of affairs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="resume">
 			<div class="left">
 				<div class="img_holder">
-					<img src="glassesguy.png" alt="picture">
+					<img src="me.png" alt="picture">
 				</div>
 				<div class="contact_wrap pb">
 					<div class="title">
@@ -49,8 +49,8 @@
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><a href="https://gitlab.mentormate.bg/devcamp_2022_01_fe_lamp/svetlin_ivanov" style="color:moccasin"><i class="fas fa-code-branch"></i></a></div>
-									<div class="text">GitLab</div>
+									<div class="icon"><a href="https://www.github.com/ivn-svn" style="color:moccasin"><i class="fas fa-code-branch"></i></a></div>
+									<div class="text">GitHub</div>
 								</div>
 							</li>
 							<li>
@@ -208,7 +208,7 @@
 								<li>
 									<div class="li_wrap">
 										<div class="date">
-											June 2021 - Present
+											June 2021 - January 2022
 										</div>
 										<div class="info">
 											<p class="info_title">
@@ -328,7 +328,7 @@
 												Lived & worked abroad  
 											</p>
 											<p class="info_com">
-											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Got deeply involved in crypto in early 2016.   
+											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Started attending Berlin & Sofia crypto meetups and became a blockchain enthusiast.   
 											</p>
 											<p class="info_cont">
 												<!-- TO BE FILLED IN -->
