--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 					<div class="title">
 						PING ME 
 					</div>
+					<!-- Language slider -->
+					<div class="languages">
+						<div class="langSlider">
+						<div class="langItem active" data-lang="en">English</div>
+						<div class="langItem" data-lang="de">Deutsch</div>
+						<div class="langItem" data-lang="bg">Български</div>
+						</div>
+					</div>
+  					<!-- Language slider -->
+					<div>
+						<section class="hidden">-</section>
+					</div>
 					<div class="contact">
 						<ul>
 							<li>
@@ -184,15 +196,6 @@
 			</div>
 			<div class="right">
 				<div class="header">
-						<!-- Language switch -->
-						<div class="languages" style="float: right;">
-							<select class="langSelect">
-								<option value="en" selected>English</option>
-								<option value="de">Deutsch</option>
-								<option value="bg">Български</option>
-							</select>
-						</div>
-						<!-- Language switch -->
 					<div class="name_role">
 						<div class="name">
 							Svetlin I.
@@ -201,7 +204,7 @@
 							Technical Analyst
 						</div>
 					</div>
-					<div class="about">
+					<div class="about text en">
 						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
@@ -209,6 +212,11 @@
 						using the full-stack of technologies utilized in both DevOps & ITOps teams has most
 						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
+					<div class="about text de">
+						Ich bin ein ehemaliger Journalist und ein Digital Native, der ein starkes Interesse an Technologie hat, was sich in meiner beruflichen Erfahrung über die Jahre hinweg zeigt. Meine Kenntnisse von Windows und Linux, gepaart mit Skripten in Bash und Python, meine Erfahrung als technischer Analyst und die Verwendung von Technologien, die sowohl in DevOps- als auch in ITOps-Teams eingesetzt werden, haben mich für die bulgarische IT-Branche prädestiniert.
+					</div>
+					<div class="about text bg">
+						Аз съм бивш журналист и  гражданин на дигиталния свят понастоящем, който има силен интерес към технологиите, доказан в професионалния ми опит през годините. Познанията ми за Windows и Linux, съчетани със скриптове на bash и Python, опитът ми като технически анализатор, използването на пълния набор от технологии, използвани както в DevOps, така и в ITOps екипи, ме направиха подходящ за българската ИТ индустрия.					</div>
 				</div>
 				<div class="right_inner">
 					<div class="exp">
