add language translations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 					</div>
   					<!-- Language slider -->
 					<div>
-						<section class="hidden">-</section>
+						<section class="hidden" style="height: 250px; padding: 50px;">
+							---
+						<br>
+						<br>
+					</section>
 					</div>
 					<div class="contact">
 						<ul>
@@ -145,49 +149,65 @@
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-book"></i></div>
-									<div class="text">Reading</div>
+									<div class="text en">Reading</div>
+									<div class="text de hidden">Lesen</div>
+									<div class="text bg hidden">Четене</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-hiking"></i></div>
-									<div class="text">Hiking</div>
+									<div class="text en">Hiking</div>
+									<div class="text de hidden">Wanderlust</div>
+									<div class="text bg hidden">Планинарство</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-gamepad"></i></div>
-									<div class="text">Gaming</div>
+									<div class="text en">Gaming</div>
+									<div class="text de hidden">Zocken</div>
+									<div class="text bg hidden">Гейминг</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-basketball-ball"></i></div>
-									<div class="text">Basketball</div>
+									<div class="text en">Basketball</div>
+									<div class="text de hidden">Basketball</div>
+									<div class="text bg hidden">Баскетбол</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-camera"></i></div>
-									<a href="http://svetlinphotography.ml/"><div class="text">Photography</div></a>
+									<a href="http://svetlinphotography.ml/"><div class="text en">Photography</div></a>
+									<a href="http://svetlinphotography.ml/"><div class="text de hidden">Fotografie</div></a>
+									<a href="http://svetlinphotography.ml/"><div class="text bg hidden">Фотография</div></a>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-object-group"></i></div>
-									<div class="text">Design</div>
+									<div class="text en">Design</div>
+									<div class="text de hidden">Gestaltung</div>
+									<div class="text bg hidden">Дизайн</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fas fa-film"></i></div>
-									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text">Video editing</div></a>
+									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text en">Video editing</div></a>
+									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text de hidden">Videobearbeitung</div></a>
+									<a href="https://www.youtube.com/watch?v=pKGjrW0oH2A"><div class="text bg hidden">Видеообработка</div></a>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-hive"></i></div>
-									<div class="text">Blockchain</div>
+									<div class="text en">Blockchain</div>
+									<div class="text de hidden">Blockchain</div>
+									<div class="text bg hidden">Блокчейн</div>
 								</div>
 							</li>
 						</ul>
@@ -197,11 +217,23 @@
 			<div class="right">
 				<div class="header">
 					<div class="name_role">
-						<div class="name">
+						<div class="name en">
 							Svetlin I.
 						</div>
-						<div class="role">
+						<div class="name de hidden">
+							Svetlin I.
+						</div>
+						<div class="name bg hidden">
+							Светлин И.
+						</div>
+						<div class="role en">
 							Technical Analyst
+						</div>
+						<div class="role de hidden">
+							Technischer Analyst
+						</div>
+						<div class="role bg hidden">
+							Технически аналзатор
 						</div>
 					</div>
 					<div class="about text en">
@@ -212,64 +244,97 @@
 						using the full-stack of technologies utilized in both DevOps & ITOps teams has most
 						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
-					<div class="about text de">
+					<div class="about text de hidden">
 						Ich bin ein ehemaliger Journalist und ein Digital Native, der ein starkes Interesse an Technologie hat, was sich in meiner beruflichen Erfahrung über die Jahre hinweg zeigt. Meine Kenntnisse von Windows und Linux, gepaart mit Skripten in Bash und Python, meine Erfahrung als technischer Analyst und die Verwendung von Technologien, die sowohl in DevOps- als auch in ITOps-Teams eingesetzt werden, haben mich für die bulgarische IT-Branche prädestiniert.
 					</div>
-					<div class="about text bg">
+					<div class="about text bg hidden">
 						Аз съм бивш журналист и  гражданин на дигиталния свят понастоящем, който има силен интерес към технологиите, доказан в професионалния ми опит през годините. Познанията ми за Windows и Linux, съчетани със скриптове на bash и Python, опитът ми като технически анализатор, използването на пълния набор от технологии, използвани както в DevOps, така и в ITOps екипи, ме направиха подходящ за българската ИТ индустрия.					</div>
 				</div>
 				<div class="right_inner">
 					<div class="exp">
-						<div class="title">
+						<div class="title en">
 							IT EXPERIENCE
 						</div>
+						<div class="title de hidden">
+							IT Erfahrung
+						</div>
+						<div class="title bg hidden">
+							IT Опит
+						</div>
+				
 						<div class="exp_wrap">
 							<ul>
 								<li>
 									<div class="li_wrap">
-										<div class="date">
+										<div class="date en">
 											June 2021 - Present
 										</div>
+										<div class="date de hidden">
+											Juni 2021 - bis jetzt
+										</div>
+										<div class="date bg hidden">
+											юни 2021 - до момента
+										</div>
 										<div class="info">
-											<p class="info_title">
+											<p class="info_title en">
 												Technical Analyst
+											</p>
+											<p class="info_title de hidden">
+												Technischer Analyst
+											</p>
+											<p class="info_title bg hidden">
+												Технически анализатор
 											</p>
 											<p class="info_com">
 												GemSeek
 											</p>
-											<p class="info_cont">
+											<p class="info_cont en">
 												6 corporate clients:
 												<br>
-												Conceptualisation/ Description/ Mock-uping of CXJourneys (Frontend of
-												large scale Customer
-												Experience surveys)
+												Conceptualization/ Description/ Mock-uping of CX Journeys (Frontend of large scale Customer Experience surveys)
 												<br>
 												<br>
-												Build of Specifications based on Requirements found during the Discovery
-												Phase
-												Configuration Build & Implementation XML, JavaScript (transformations),
-												data parsing, e.g.
-												building profanity filter, Customer Satisfaction calculations using JS,
-												etc. Localization and
-												translation for countries from the European Union.
-												Creation & Execution of Testing Plan & Testing Cases
-												Build & Test of dummy data, mapping the logic of the Implementation. Managing Access Control Lists
-												of an ad-hoc, purpose-built client cloud platform. Maintenance of the questions & answers database of the clients. E.g. 
-												Creating new answer entries and engineering the structure of the survey based on previous ones 
-												(taking decisions on utilizing old infrastructure or creating new one)
-												Sync of survey answer DB entries, across active surveys, survey infrastructure incident management, etc.
+												Build of Specifications based on Requirements found during the Discovery Phase Configuration Build & Implementation XML, JavaScript (transformations), data parsing, e.g. building profanity filter, Customer Satisfaction calculations using JS, etc. Localization and translation for countries from the European Union. Creation & Execution of Testing Plan & Testing Cases Build & Test of dummy data, mapping the logic of the Implementation. Managing Access Control Lists of an ad-hoc, purpose-built client cloud platform. Maintenance of the questions & answers database of the clients. E.g. Creating new answer entries and engineering the structure of the survey based on previous ones (taking decisions on utilizing old infrastructure or creating new one) Sync of survey answer DB entries, across active surveys, survey infrastructure incident management, etc.
+											</p>
+											<p class="info_cont de hidden">
+												6 Firmenkunden:
+												<br>
+												Konzeption/ Beschreibung/ Mock-up von CXJourneys (Frontend großer Customer-Experience-Umfragen)
+												<br>
+												<br>
+												Erstellung von Spezifikationen auf der Grundlage der Anforderungen, die während der Discovery-Phase gefunden wurden. Konfigurationsaufbau und Implementierung von XML, JavaScript (Transformationen), Datenparsen usw., z. B. Erstellung eines Unflätigkeitsfilters, Berechnung der Kundenzufriedenheit mit JS usw. Lokalisierung und Übersetzung für Länder der Europäischen Union. Erstellung und Durchführung eines Testplans und von Testfällen. Erstellung und Test von Dummy-Daten, Abbildung der Logik der Implementierung. Verwaltung von Zugriffssteuerungslisten für eine ad-hoc entwickelte Kunden-Cloud-Plattform. Pflege der Fragen- und Antworten-Datenbank der Kunden. z. B. Erstellung neuer Antworteinträge und Anpassung der Struktur der Umfrage auf Basis früherer Umfragen (Entscheidungen zur Nutzung der alten Infrastruktur oder zur Erstellung einer neuen) Synchronisierung von Umfrageantwort-DB-Einträgen zwischen aktiven Umfragen, Verwaltung von Umfrageinfrastrukturvorfällen usw.
+											</p>
+											<p class="info_cont bg hidden">
+												6 фирмени клиента:
+												<br>
+												Концептуализация/ Описание/ Макетиране на CXJourneys (фронтенд на големи клиентски изследвания за преживяване)
+												<br>
+												<br>
+												Създаване на спецификации на базата на изисквания, открити по време на фазата на откриване. Изграждане и имплементация на конфигурация XML, JavaScript (трансформации), обработка на данни и т.н., например изграждане на филтър за неприличия, изчисляване на задоволството на клиентите с помощта на JS и др. Локализация и превод за държави от Европейския съюз. Създаване и изпълнение на план за тестване и тестови случаи. Създаване и тестване на данни-шаблони, съответстващи на логиката на имплементацията. Управление на списъци с контрол върху достъпа на една клиентска облачна платформа, създадена ад хок, специално за този клиент. Поддръжка на базата данни с въпроси и отговори на клиентите. Например създаване на нови записи с отговори и проектиране на структурата на изследването въз основа на предишни такива (взимане на решения за използване на стара инфраструктура или създаване на нова) Синхронизиране на записи в базата данни с отговори от изследвания, провеждани по настоящия момент, управление на инциденти в инфраструктурата на изследванията и др.
 											</p>
 										</div>
 									</div>
 								</li>
 								<li>
 									<div class="li_wrap">
-										<div class="date">
+										<div class="date en">
 											January 2021 - June 2021
 										</div>
+										<div class="date de hidden">
+											Januar 2021 - Juni 2021
+										</div>
+										<div class="date bg hidden">
+											януари 2021 - юни 2021
+										</div>
 										<div class="info">
-											<p class="info_title">
-												Technical Analyst in the 3-rd Level Development Support
+											<p class="info_title en">
+												Technical Analyst in the 3rd Level Development Support
+											</p>
+											<p class="info_title de hidden">
+												Technischer Analyst im 3rd-Level-Entwicklungssupport
+											</p>
+											<p class="info_title bg hidden">
+												Технически анализатор в поддръжка на развитието на трето ниво
 											</p>
 											<p class="info_com">
 												Regiocom
@@ -277,141 +342,57 @@
 											<!--TEST JS -->
 											<div id="donut_single"></div>
 											<!-- TEST JS END-->
-											<p class="info_cont">
-												Log monitoring and analysis of server application errors using Grafana,
-												Logstash Kibana, Java
-												EE, Enterprise APIs, SoapUI, Postman, JSON and XML, GitLab, Git, Github,
-												Git Extensions. Documenting the workflow and escalating tickets on Jira.
+											<p class="info_cont en">
+												Log monitoring and analysis of server application errors using Grafana, Logstash Kibana, Java EE, Enterprise APIs, SoapUI, Postman, JSON and XML, GitLab, Git, Github, Git Extensions. Documenting the workflow and escalating tickets on Jira.
+											</p>
+											<p class="info_cont de hidden">
+												Log-Überwachung und Analyse von Fehlern in Serveranwendungen mit Hilfe von Grafana, Logstash Kibana, Java EE, Enterprise APIs, SoapUI, Postman, JSON und XML, GitLab, Git, Github, Git Extensions. Dokumentation des Arbeitsablaufs und Eskalation von Tickets in Jira.
+											</p>
+											<p class="info_cont bg hidden">
+												Мониторинг и анализ на грешки в сървърни приложения с използването на Grafana, Logstash Kibana, Java EE, Enterprise APIs, SoapUI, Postman, JSON и XML, GitLab, Git, Github, Git Extensions. Документиране на работния процес и изкарване на тикети в Jira.
 											</p>
 										</div>
 									</div>
 								</li>
 								<li>
 									<div class="li_wrap">
-										<div class="date">
+										<div class="date en">
 											October 2020 - February 2021
 										</div>
+										<div class="date de hidden">
+											Oktober 2020 - Februar 2021
+										</div>
+										<div class="date bg hidden">
+											октомври 2020 - февруари 2021
+										</div>
 										<div class="info">
-											<p class="info_title">
+											<p class="info_title en">
 												Software Application Packaging Coordinator
+											</p>
+											<p class="info_title de hidden">
+												Softwareanwendungspaketkoordinator
+											</p>
+											<p class="info_title bg hidden">
+												Координатор на пакетирането на софтуерни приложения
 											</p>
 											<p class="info_com">
 												Commerzbank
 											</p>
-											<p class="info_cont">
-												Coordinating the software packaging process of bank applications Windows
-												Server 2016,
-												Windows System Administration and several technologies for mass software
-												deployment and
-												keeping track of the software lifecycle in Jira.
+											<p class="info_cont en">
+												Coordinating the software packaging process of bank applications Windows Server 2016, Windows System Administration, and several technologies for mass software deployment and keeping track of the software lifecycle in Jira.
 											</p>
-										</div>
-									</div>
-								</li>
-							</ul>
-							<li>
-								<div class="li_wrap">
-									<div class="date">
-										September 2019 - October 2020
-									</div>
-									<div class="info">
-										<p class="info_title">
-											Software Lifecycle Implementation Specialist
-										</p>
-										<p class="info_com">
-											DXC Technology
-										</p>
-										<p class="info_cont">
-											Mass software deployment of applications for all Windows versions from the past 10 years for a
-											major client from the German automotive industry. Used technologies: Windows SysInternals
-											tools, Active Directory, the Windows Registry, GPMC.msc, patch testing for Adobe
-											Creative Cloud packages, PowerShell and Batch scripting, InstallShield, Repackager and Regshot.
-										</p>
-									</div>
-								</div>
-							</li>
-						</div>
-					</div>
-					<div class="education">
-						<div class="title">
-							Education & Personal 
-						</div>
-						<div class="education_wrap">
-							<ul>
-								<li>
-									<div class="li_wrap">
-										<div class="date">
-											2017 - 2019
-										</div>
-										<div class="info">
-											<p class="info_title">
-												Lived & worked abroad  
+											<p class="info_cont de hidden">
+												Koordinierung des Softwareverpackungsprozesses von Bankanwendungen Windows Server 2016, Windows Systemadministration und mehrerer Technologien für die massenhafte Softwarebereitstellung und Verfolgung des Softwarelebenszyklus in Jira.
 											</p>
-											<p class="info_com">
-											Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Got deeply involved in crypto in early 2016.   
-											</p>
-											<p class="info_cont">
-												<!-- TO BE FILLED IN -->
-											</p>
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="li_wrap">
-										<div class="date">
-											2017 Test DaF (Deutsch als Fremdsprache) & IELTS 
-										</div>
-										<div class="info">
-											<p class="info_title">
-											Erasmus & EVS (European Voluntary Service)  
-											</p>
-											<p class="info_com">
-												C1 - C2 in German & English, certified
-											</p>
-											<p class="info_cont">
-												I took part in an EVS program in Berlin & further Erasmus experiences on the topics of Business & Entrepreneurship.
-											</p>
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="li_wrap">
-										<div class="date">
-											2012 - 2016
-										</div>
-										<div class="info">
-											<p class="info_title">
-												Bachelor graduate of Journalism @ Sofia University
-											</p>
-											<p class="info_com">
-												Faculty of Media and Mass Communication
-											</p>
-											<p class="info_cont">
-												I specialised in International Relations, Data Journalism (Print & Web Design).
-											</p>
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="li_wrap">
-										<div class="date">
-											2008 - 2012 
-										</div>
-										<div class="info">
-											<p class="info_title">
-												18 high-school William Gladstone, Sofia
-											</p>
-											<p class="info_com">
-												Natural Science & Informatics  
-											</p>
-											<p class="info_cont">
-												<!-- TO BE FILLED IN -->
+											<p class="info_cont bg hidden">
+												Координиране на процеса по опаковане на софтуерни приложения на банката Windows Server 2016, администриране на Windows System и няколко технологии за масово разпространение на софтуер и проследяване на жизнения цикъл на софтуера в Jira.
 											</p>
 										</div>
 									</div>
 								</li>
 							</ul>
 						</div>
+						
 					</div>
 				</div>
 			</div>
