add language translations and latest occupation

--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
 							</li>
 							<li>
 								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-php"></i></div>
+									<div class="text">PHP</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+									<div class="icon"><i class="fab fa-docker"></i></div>
+									<div class="text">Docker</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
 									<div class="icon"><i class="fab fa-python"></i></div>
 									<a href="http://ride-calc.tk/"><div class="text">Python</div></a>
 								</div>
@@ -264,6 +276,52 @@
 				
 						<div class="exp_wrap">
 							<ul>
+								<li>
+									<div class="li_wrap">
+										<div class="date en">
+											April 2022 - Present
+										</div>
+										<div class="date de hidden">
+											April 2022 - bis jetzt
+										</div>
+										<div class="date bg hidden">
+											Април 2022 - до момента
+										</div>
+										<div class="info">
+											<p class="info_title en">
+												Product Manager & Software Developer
+											</p>
+											<p class="info_title de hidden">
+												Produktmanager & Software Developer
+											</p>
+											<p class="info_title bg hidden">
+												Продуктов мениджър и софтуерен разработчик
+											</p>
+											<p class="info_com">
+												VERO DIGITAL SOLUTIONS
+											</p>
+											<p class="info_cont en">
+												<br>
+												Software Developer, QA & Product Management responsible for the creation of Dynamic Contract Papers (API printouts), and their API Integration as well as the Quality Assurance of the implemented system changes and responsible for the product delivered. 
+												<br>
+												<br>
+											</p>
+											<p class="info_cont de hidden">
+												<br>
+												Softwareentwickler, QA & Produktmanagement verantwortlich für die Erstellung von dynamischen Vertragsdokumenten (API-Ausdrucken) und deren API-Integration sowie die Qualitätssicherung der implementierten Systemänderungen und verantwortlich für das gelieferte Produkt.
+												<br>
+
+												<br>
+											</p>
+											<p class="info_cont bg hidden">
+												<br>
+												<br>
+												Софтуерен разработчик, QA и управление на продукт, отговорен за създаването на Динамични договорни документи (отпечатъци от API) и тяхната интеграция чрез API, както и за осигуряването на качеството на внедрените промени в системата и отговорен за доставения продукт.
+												<br>
+											</p>
+										</div>
+									</div>
+								</li>
 								<li>
 									<div class="li_wrap">
 										<div class="date en">
