add new work experiences, add new profile pic/avatar; add new styles

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
 <body>
 	<div class="wrapper">
+		<div class="container">
+			
+			
+			<div class="gradient">
 		<div class="resume">
 			<div class="left">
 				<div class="img_holder">
-					<img src="glassesguy.png" alt="picture">
+					<img src="sims.png" alt="picture" id="avatar">
 				</div>
 				<div class="contact_wrap pb">
 					<div class="title">
@@ -56,19 +60,21 @@
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><a href="mailto:iv.svetlin@outlook.com" style="color:moccasin"><i class="fas fa-envelope" aria-hidden="true"></i></a></div>
-									<div class="text">iv.svetlin@outlook.com</div>
+									<div class="icon"><a href="mailto:iv.svetlin@outlook.com" style="color:#b8977c"><i class="fas fa-envelope" aria-hidden="true"></i></a></div>
+									<div class="text">									
+										iv.svetlin@outlook.com <span class="copy-icon" onclick="copyToClipboard('iv.svetlin@outlook.com')" title="Copy email address"><i class="fas fa-clipboard" style="color:#b8977c; font-size: 11px;"></i></span>
+									</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><a href="https://www.github.com/ivn-svn" style="color:moccasin"><i class="fas fa-code-branch"></i></a></div>
+									<div class="icon"><a href="https://www.github.com/ivn-svn" style="color:#b8977c"><i class="fas fa-code-branch"></i></a></div>
 									<div class="text">github.com/ivn-svn</div>
 								</div>
 							</li>
 							<li>
 								<div class="li_wrap">
-									<div class="icon"><a href="https://goo.gl/maps/V5myGhy9E7MxpWqE9" style="color:moccasin"><i class="fas fa-map-signs" aria-hidden="true"></i></a></div>
+									<div class="icon"><a href="https://goo.gl/maps/V5myGhy9E7MxpWqE9" style="color:#b8977c"><i class="fas fa-map-signs" aria-hidden="true"></i></a></div>
 									<div class="text en">
 										1618 | Sofia, Bulgaria
 									</div>
@@ -428,7 +434,7 @@
 												Software Application Packaging Coordinator
 											</p>
 											<p class="info_title de hidden">
-												Softwareanwendungspaketkoordinator
+												Koordinator in Softwarepaketierung (SysAdmin Koordinator) 
 											</p>
 											<p class="info_title bg hidden">
 												Координатор на пакетирането на софтуерни приложения
@@ -456,6 +462,8 @@
 			</div>
 		</div>
 	</div>
+</div>  
+</div>
 </body>
 
 </html>
